--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 		<!-- banner is being very annoying -->
 		<img id="banner" src="../Week2/banner.jpg" ;/>
 		<u1>
-		<a href="portfolio.html"><li>Portfolio</li></a></u1>
+		<a href="test.html"><li>Portfolio</li></a></u1>
 	</header>
 	<div id="page">
 		<h1> Portfolio in Progress</h1> 
@@ -183,3 +183,4 @@
 	</div>
 </body>
 </html>
+
