--- a/test.html
+++ b/test.html
@@ -99,7 +99,7 @@
     <div id="page">
         <header>
             <img src="banner.png">
-                <a href="https://r3adams.github.io/grc-365-new/index.html"><li>Home</li>
+                <a href="index.html"><li>Home</li>
                 </a>
             <h1>Portfolio</h1>
         </header>
@@ -127,6 +127,7 @@
             <h2>End</h2>
         </footer>
     </div>
+
 
 
 </body></html>
