--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		
 	</p>
 	<p>
-		<video width="640" height="360" controls poster="../Week2/postervideo.jpg"> <source src="portfoliointro.mp4"> </video>
+		<video width="640" height="360" controls poster="postervideo.jpg"> <source src="portfoliointro.mp4"> </video>
 	
 		</p><p>I’m a passionate graphic design student dedicated to turning ideas into visual stories. Here you’ll find a curated selection of my work, ranging from brand identity and packaging design to digital illustration and UI layout projects. My approach blends clean aesthetics with purposeful design, focusing on clarity, creativity, and meaningful impact.</p>
 
@@ -183,5 +183,6 @@
 	</div>
 </body>
 </html>
+
 
 
